# agent-autopsy-sdk

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
agent_autopsy/: __init__.py  _footer.py  capture.py  cli.py  langchain_handler.py  models.py  renderer.py
tests/: test_capture.py  test_cli.py  test_langchain.py  test_renderer.py
tests/fixtures/: sample_trace.json
