[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-autopsy"
version = "0.1.0"
description = "Debug AI agent failures with zero-config execution traces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Aegis Ledger", email = "info@aegis-ledger.com" }]
keywords = ["ai-agents", "debugging", "tracing", "langchain", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.10", "ruff>=0.4"]

[project.scripts]
autopsy = "agent_autopsy.cli:main"

[project.urls]
Homepage = "https://github.com/VladislavRoss/Agent-Autopsy"
Documentation = "https://github.com/VladislavRoss/Agent-Autopsy#readme"
"Production Tracing" = "https://www.aegis-ledger.com"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["N806"]
